<resources>
    <string name="app_name">Notes</string>

    <string name="field_title_hint">Title</string>
    <string name="field_content_hint">Content</string>
    <string name="save_text">Save</string>
    <string name="description">Description</string>
    <string name="take_photo_text">Take photo</string>
    <string name="add_photo_text">Add photo</string>

    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="authorities">com.serhii_00_tymoshenko.notes</string>
</resources>